--- a/llt.bib
+++ b/llt.bib
@@ -322,7 +322,9 @@
 @techreport{yu2017improved,
   title={Improved Real Time Lane Detection Using Advanced Lane Extraction Method},
   author={Yu, Guizhen and Wang, Zhangyu and Wu, Xinkai and Ma, Yalong},
-  year={2017}
+  year={2017},
+  institution = {Transportation Research Board},
+  address = {500 Fifth Street, NW Washington, DC  United States  20001},
 }
 
 @article{cao2016vehicle,
@@ -872,3 +874,19 @@ journal={Colour metric: https://www.compuphase.com/cmetric.htm},   year={2018}}
   year={2002},
   publisher={ACM New York, NY, USA}
 }
+
+ @misc{service_2010, title={East Orange police arrest 30 as part of investigation combating gang violence}, url={https://www.nj.com/news/local/2010/06/police_make_arrests_in_east_or.html}, journal={nj}, author={Service, New Jersey Local News}, year={2010}, month={Jun}} 
+ 
+  @misc{college_2013, title={Normalized human photoreceptor absorbances for different wavelengths of light}, url={https://en.wikipedia.org/wiki/Photoreceptor_cell#/media/File:1416_Color_Sensitivity.jpg}, journal={Wikipedia}, publisher={Wikimedia Foundation}, author={OpenStaxCollege}, year={2013}, month={Jun}} 
+  
+  @inproceedings{hampapur2004s3,
+  title={S3-r1: The ibm smart surveillance system-release 1},
+  author={Hampapur, Arun and Brown, Lisa and Connell, Jonathan and Haas, Norman and Lu, Max and Merkl, Hans and Pankanti, Sharat and Senior, Andrew and Shu, Chiao-Fe and Tian, Yingli},
+  booktitle={Proceedings of the 2004 ACM SIGMM workshop on Effective telepresence},
+  pages={59--62},
+  year={2004}
+}
+
+@misc{mrfr_2021, title={Video Surveillance Storage Market Research Report - Forecast to 2027: MRFR},
+author={Market Research Future},
+url={https://www.marketresearchfuture.com/reports/video-surveillance-storage-market-5848}, journal={Video Surveillance Storage Market Research Report - Forecast to 2027 | MRFR}, author={Market Research Future (MRFR)}, year={2021}, month={Feb}}
