--- a/thesis.tex
+++ b/thesis.tex
@@ -104,8 +104,8 @@ breaklines=true,breakatwhitespace=true}
 
 \author{Clarence Cheong Weihan}
 \title{Extraction and Retrieval of Vehicle Semantics for Long-Term Car Park Videos}
-\submissionyear{2020}
-\submissionmonth{October}
+\submissionyear{2021}
+\submissionmonth{March}
 \faculty{Faculty of Computing and Informatics}
 \degree{Master~of~Science (Information~Technology)}
 \qualification{B.Eng.~(Hons), Multimedia University, Malaysia\\%
@@ -148,7 +148,7 @@ thought of.
 Thank you everyone! Much blessings.
 
 }
-\dedication{To my parents, my wife, and my family.}
+\dedication{To my parents \& family, my wife, and to my son Ralph.}
 
 \abstractfromfile{abstract}
 
